--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,10 @@
 [package]
 name = "main-app"
 version = "0.1.0"
+edition = "2024"
+
+[dependencies]
+futures-util = "0.3.31"
+tokio = {version = "1.45.0", features = ["full"]}
+tokio-tungstenite = "0.26.2"
+
