--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,8 @@ edition = "2024"
 
 [dependencies]
 futures-util = "0.3.31"
+serde = {version = "1.0.219", features = ["derive"]}
+serde_json = "1.0"
 tokio = {version = "1.45.0", features = ["full"]}
 tokio-tungstenite = "0.26.2"
 
